--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(fish.jpg);
-    background-size: cover;
+    background-image: url(background.jpg);
+    background-repeat: no-repeat;
+    background-size: auto;
 }
 
 img {
@@ -12,10 +20,20 @@ img {
 }
 
 button {
-    width: 100px;
+    width: 150px;
     height: 40px;
     font-size: 1rem;
     margin-top: 20px;
+    background-color: rgb(49, 49, 49);
+    color: white;
+    border-radius: 15px;
+    padding: 5px 20px 5px 20px;
+    font-weight: bold;
+    border: 1px solid white;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 .search-div {
@@ -24,8 +42,14 @@ button {
 
 input {
     height: 40px;
+    margin-right: 10px;;
 }
 
 label {
     font-size: 1.2rem;
+    font-weight: bold;
+    color: white;
+    background-color: rgb(49, 49, 49);
+    height: 40px;
+    padding: 5px;
 }
